# 5-task

./: CMakeLists.txt  MatrixMath.cpp  MatrixMath.h  main.cpp  test.cpp
